[gd_scene load_steps=7 format=2]

[ext_resource path="res://rawAssets/tie.png" type="Texture" id=1]
[ext_resource path="res://Tie.gd" type="Script" id=2]
[ext_resource path="res://rawAssets/TieFlyby.mp3" type="AudioStream" id=3]
[ext_resource path="res://rawAssets/TieBlast.mp3" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -30, -4, -31, -42, -41, -55, -43, -1, -40, 55, -29, 41, -29, 4, -25, 3, -24, 4, -12, 8, -9, 11, -3, 14, 1, 14, 7, 12, 11, 7, 14, 7, 22, 5, 24, 3, 26, 3, 28, 4, 29, 42, 39, 56, 42, 0, 39, -55, 38, -56, 29, -43, 28, -5, 27, -3, 23, -3, 22, -4, 15, -5, 14, -7, 11, -7, 8, -10, 4, -12, -1, -14, -6, -12, -11, -10, -12, -7, -15, -6, -25, -3 )

[node name="Tie" type="Area2D"]
z_index = 10
collision_layer = 6
collision_mask = 6
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.25, 0.25 )
polygon = PoolVector2Array( -114, 184, -158, 237, -183, -3, -167, -230, -115, -162, -112, -17, -2, -67, 97, -19, 101, -164, 151, -223, 169, -3, 158, 240, 106, 164, 97, 31, -2, 65, -109, 21 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Blasters" type="Node" parent="."]

[node name="BlasterSound1" type="AudioStreamPlayer2D" parent="Blasters"]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Blasters"]
wait_time = 0.2
one_shot = true

[node name="BlasterSound2" type="AudioStreamPlayer2D" parent="Blasters"]
stream = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Tie_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Tie_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Blasters/Timer" to="." method="_on_Timer_timeout"]
